# conf_manager

./: CHANGELOG.md  README.md  pyproject.toml
conf_manager/: base_config.py
conf_manager/utils/data_providers/: file_data_provider.py
conf_manager/utils/parsers/: base_parser.py  toml_parser.py
