[tool.poetry]
name = "conf-manager"
version = "0.1.0"
description = ""
authors = ["Matthew <matthewgiovannini@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
